--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,64 @@
   text-align: center;
 }
 
+body, html {
+  height:100%;
+}
+
+select {
+  padding:20px 20px;
+}
+
+.gmnoprint {
+  right:0 !important;
+}
+
+.runs {
+  background-color: rgba(0,0,0,.9);
+  position: fixed;
+  top: 00px;
+  left: 0;
+  height: 100%;
+  width: 200px;
+  z-index: 3;
+  box-shadow: 0px 0px 20px rgba(0,0,0,.8);
+}
+
+.runs h3 {
+  color:#fff;
+  margin:0;
+  margin-top:1em;
+  font-size:1em;
+  font-weight:300;
+}
+
+.runs img {
+  width:70%;
+  margin-top:1.5em;
+  margin-bottom:-2em;
+}
+
+.runs h2 {
+  color:#fff;
+  margin:0;
+  margin-top:3em;
+  font-size:1.2em;
+}
+
+button {
+  margin-top:3em;
+  padding:10px 20px;
+  background: #c64c4d;
+  color:#fff;
+  border:none;
+  text-transform: uppercase;
+  font-size:1.1em;
+}
+
+#root, #app {
+  height:100%;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
