--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,17 @@ select {
   right:0 !important;
 }
 
+.runs .showHide {
+  position: absolute;
+    top: 10px;
+    right: -60px;
+    background-color: black;
+    color: red;
+    padding: 10px;
+    font-size: .9em;
+    border-radius: 0px 10px 10px 0px;
+}
+
 .runs {
   background-color: rgba(0,0,0,.9);
   position: fixed;
@@ -23,6 +34,10 @@ select {
   width: 200px;
   z-index: 3;
   box-shadow: 0px 0px 20px rgba(0,0,0,.8);
+}
+
+.runs.hide {
+  left:-200px;
 }
 
 .runs h3 {
